--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .title {
     text-align:center;
-    background-color: #000;
+    background-color: rgb(228, 228, 228);
     color:rgb(45, 160, 180);
     font-family: copperplate gothic;
     font-size:10%;
